023 ==> 451637 - Crash while extra->maintenance.
024 ==> 386522 - Video decoder backend in digiKam (windows 10).
025 ==> 418266 - Animated .gif files flicker while looping.
026 ==> 451933 - No access to folders with Flatpak.
027 ==> 451934 - Cannot move picture to trash.
028 ==> 451943 - digiKam crashes on *.svg file that contains a font that's not installed on the system.
029 ==> 451924 - digiKam-7.7.0-20220325T121458-Win64.tar.xz crash on start.
030 ==> 452008 - Timestamp not updated when using File name timestamp.
031 ==> 452103 - Custom keyboard shortcut definitions not persistent.
032 ==> 452323 - digiKam crash after importing photos.
033 ==> 452321 - digiKam Album date after migration from Picasa3.
034 ==> 122738 - Exiv2 needed to compile.
035 ==> 451868 - Crash while creating quality.
036 ==> 452578 - Cannot set correct image folder when configure.
037 ==> 452712 - Appimage for 7.6.0 will not run in Ubuntu 18.04.
038 ==> 452677 - The date is passed to iNaturalist in the wrong format.
039 ==> 452947 - From Batch Queue Manager metadata for lens auto-correction are not recognized.
040 ==> 452577 - Export to Pinterest function does not work and shows a message status:failure,code:11.
041 ==> 453181 - QMYSQL driver not loaded.
042 ==> 453231 - digiKam does not work anymore after upgrading to ubuntu 22.04.
043 ==> 453244 - 7.6.0 Appimage crashes on Ubuntu 22.04.
044 ==> 453249 - Face regions get lost when the file is renamed.
045 ==> 453418 - Color Profile Default Locations not Correct.
046 ==> 453516 - Crash on Inkscape svg file in Exiv2.
047 ==> 453611 - Showfoto main window freeze and crash at startup.
048 ==> 453617 - Add "Ignore face" button for unrecongised faces in thumbnail view.
049 ==> 453707 - Resizing and then ignoring recognised face ignores the original rectangle and resizes the rectangle for the suggested face.
050 ==> 453817 - digiKam does not detect hugin software as it is now provided as a flatpack, and no more as a classic ppa.
051 ==> 