@@ -64,4 +64,6 @@ BUGFIXES:
 048 ==> 453617 - Add "Ignore face" button for unrecongised faces in thumbnail view.
 049 ==> 453707 - Resizing and then ignoring recognised face ignores the original rectangle and resizes the rectangle for the suggested face.
 050 ==> 453817 - digiKam does not detect hugin software as it is now provided as a flatpack, and no more as a classic ppa.
-051 ==> 
+051 ==> 453905 - Network Mounts are not functional.
+052 ==> 453888 - Exiftool display of a malformed tag.
+053 ==> 
